apps/production/audiobookshelf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: audiobookshelf-http
  namespace: audiobookshelf-prod
spec:
  hostnames:
    - audiobooks.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http-internal
  rules:
    - backendRefs:
      - name: audiobookshelf
        port: 3005
